[package]
name = "tracing-mcap"
version = "0.1.0"
edition = "2021"

[dependencies]
mcap = "0.11.0"
static_assertions = "1.1.0"
tracing = { version = "0.1.40", features = ["valuable"] }
tracing-subscriber = "0.3.18"
valuable = { version = "0.1.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.93"
schemars = "0.8.21"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing-serde = "0.2.0"
valuable = { version = "0.1.0", features = ["derive"] }
