[package]
name = "telem-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
mcap = "0.11.0"
tracing = { version = "0.1.40", features = ["valuable"] }

[dev-dependencies]
anyhow = "1.0.93"
schemars = "0.8.21"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing-subscriber = "0.3.18"
